snakecicd_prod/templates/falco-fake-sidekick.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  namespace: default
  labels:
    app: echo-sidekick
spec:
  containers:
  - name: echo
    image: ealen/echo-server:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: falco-falcosidekick
  namespace: default
spec:
  selector:
    app: echo-sidekick
  ports:
  - port: 2801
    targetPort: 80
    protocol: TCP
