snakecicd_prod/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snakecicd-service
  namespace: snakecicd-prod
  labels:
    app: snakecicd-prod
spec:
  type: ClusterIP
  ports:
    - port: 8321
      targetPort: 80
  selector:
    app: snakecicd-prod
