snakecicd_prod/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: snakecicd-network-policy
  namespace: snakecicd-prod
spec:
  podSelector:
    matchLabels:
      app: snakecicd-prod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8321
